@startuml
title Insights Command Class View

class Parser {
  + parse(input: String): ParsedCommand
}

class CG2StocksTracker {
  + run()
}

class PortfolioBook {
  + getActivePortfolio(): Portfolio
}

class Portfolio {
  + getHoldings(): List<Holding>
  + getTotalUnrealizedPnl(): double
}

class Ui {
  + showInsightsTable(portfolio: Portfolio, options: InsightsOptions)
}

class InsightsOptions {
  + filterType: AssetType
  + topN: Integer
  + showChart: boolean
}

Parser ..> CG2StocksTracker : raw options via ParsedCommand.listTarget
CG2StocksTracker ..> InsightsOptions : parseInsightsOptions(...)
CG2StocksTracker ..> PortfolioBook : getActivePortfolio()
CG2StocksTracker ..> Ui : showInsightsTable(portfolio, options)
Ui ..> Portfolio
@enduml
